--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Shoes</a>
+              <a class="nav-link" href="#shoes">Shoes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Backpack</a>
+              <a class="nav-link" href="#backpack">Backpack</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Subscribe</a>
+              <a class="nav-link" href="#subscribe">Subscribe</a>
             </li>
           </ul>
         </div>
@@ -42,14 +42,15 @@
     </nav>
   </header>
   <!-- slider section -->
-  <section>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <section class="container">
+    <div id="carouselExampleControls" class="carousel slide panda-slide mt-5" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <div class="row">
-            <div class="col-md-7">
+          <div class="row d-flex align-items-center p-5">
+            <div class="col-md-7 ">
               <h1>Cool Dude Headphone</h1>
-              <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+              <p>This is the best headphone in the world for people who just want to waste time in front of funky world.
+              </p>
               <h1>$420</h1>
               <button class="btn btn-warning">Buy Now</button>
             </div>
@@ -59,9 +60,12 @@
           </div>
         </div>
         <div class="carousel-item">
-          <div class="row">
+          <div class="row d-flex align-items-center p-5">
             <div class="col-md-7">
-
+              <h1>Mega LCD TV For Sports</h1>
+              <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+              <h1>$1200</h1>
+              <button class="btn btn-warning">Buy Now</button>
             </div>
             <div class="col-md-5">
               <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -69,9 +73,12 @@
           </div>
         </div>
         <div class="carousel-item">
-          <div class="row">
+          <div class="row d-flex align-items-center p-5">
             <div class="col-md-7">
-
+              <h1>X-Box for your living room</h1>
+              <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
+              <h1>$600</h1>
+              <button class="btn btn-warning">Buy Now</button>
             </div>
             <div class="col-md-5">
               <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -90,24 +97,24 @@
     </div>
   </section>
 
-  <!-- gutters section -->
+  <!-- catagories section using gutters-->
   <main class="container">
-    <div class="container overflow-hidden mt-5">
-      <div class="row gx-5">
+    <div class="container overflow-hidden mt-5 catagories">
+      <div class="row g-5">
         <div class="col">
-          <div class="p-3 rounded bg-primary d-flex align-items-center justify-content-around">
+          <div class="p-3 bg-primary d-flex align-items-center justify-content-around cat1">
             <h1 class="text-white">Watch</h1>
             <img src="images/categories/watch.png" alt="">
           </div>
         </div>
         <div class="col">
-          <div class="p-3 rounded bg-success d-flex align-items-center justify-content-around">
+          <div class="p-3 bg-success d-flex align-items-center justify-content-around">
             <h1 class="text-white">Bag</h1>
             <img src="images/categories/bag.png" alt="">
           </div>
         </div>
         <div class="col">
-          <div class="p-3 rounded bg-warning d-flex align-items-center justify-content-around">
+          <div class="p-3 bg-warning d-flex align-items-center justify-content-around">
             <h1 class="text-white">Shoes</h1>
             <img src="images/categories/shoes.png" alt="">
           </div>
@@ -118,45 +125,45 @@
     <!-- shoes section -->
 
     <section class="mt-5">
-      <h3>Shoes</h3>
+      <h3 id="shoes">Shoes</h3>
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
-          <div class="card h-100 shadow">
+          <div class="card panda-card h-100 shadow">
             <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Supply 350</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.
               </p>
             </div>
-            <div class="card-footer">
+            <div class="card-footer panda-card-footer">
               <h5 class="card-title">$120</h5>
               <button class="btn btn-warning">Buy Now >></button>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card h-100 shadow">
+          <div class="card panda-card h-100 shadow">
             <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Nike 360</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.
               </p>
             </div>
-            <div class="card-footer">
+            <div class="card-footer panda-card-footer">
               <h5 class="card-title">$320</h5>
               <button class="btn btn-warning">Buy Now >></button>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card h-100 shadow">
+          <div class="card panda-card h-100 shadow">
             <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Red Airmax</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.
               </p>
             </div>
-            <div class="card-footer">
+            <div class="card-footer panda-card-footer">
               <h5 class="card-title">$350</h5>
               <button class="btn btn-warning">Buy Now >></button>
             </div>
@@ -167,10 +174,10 @@
     <!-- Backpack section -->
 
     <section class="mt-5">
-      <h3>Backpack</h3>
+      <h3 id="backpack">Backpack</h3>
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
-          <div class="card h-100 shadow">
+          <div class="card panda-card h-100 shadow">
             <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Red Laltu Bag</h5>
@@ -178,26 +185,26 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                 content. This content is a little bit longer.</p>
             </div>
-            <div class="card-footer">
+            <div class="card-footer panda-card-footer">
               <button class="btn btn-warning">Buy Now >></button>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card h-100 shadow">
+          <div class="card panda-card h-100 shadow">
             <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Blue Niltu Bag</h5>
               <h5 class="card-title">$320</h5>
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
-            <div class="card-footer">
+            <div class="card-footer panda-card-footer">
               <button class="btn btn-warning">Buy Now >></button>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card h-100 shadow">
+          <div class="card panda-card h-100 shadow">
             <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Black Kaltu Bag</h5>
@@ -205,7 +212,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                 content. This card has even longer content than the first to show that equal height action.</p>
             </div>
-            <div class="card-footer">
+            <div class="card-footer panda-card-footer">
               <button class="btn btn-warning">Buy Now >></button>
             </div>
           </div>
@@ -213,7 +220,7 @@
       </div>
     </section>
     <!-- get in touch section -->
-    <section style="height: 500px;" class="bg-info mt-5 d-flex justify-content-center align-items-center">
+    <section id="subscribe" style="height: 500px;" class="bg-info mt-5 d-flex justify-content-center align-items-center">
       <div>
         <h1>LET'S STAY IN TOUCH</h1>
         <h6>Get updates on sales, specials and more</h6>
@@ -225,7 +232,7 @@
   </main>
 
   <footer class="text-center mt-5">
-    <small>©2020. Panda Commerce. All rights reserved. online platform created by masud.</small>
+    <small>©2020. Panda Commerce. All rights reserved..created by masud.</small>
   </footer>
 
 
