last edited responsive

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </nav>
   </header>
   <!-- slider section -->
-  <section class="container">
-    <div id="carouselExampleControls" class="carousel slide panda-slide mt-5" data-bs-ride="carousel">
+  <section class="container mt-5">
+    <div id="carouselExampleControls" class="carousel slide panda-slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="row d-flex align-items-center p-5">
