--- a/index.html
+++ b/index.html
@@ -220,12 +220,13 @@
       </div>
     </section>
     <!-- get in touch section -->
-    <section id="subscribe" style="height: 500px;" class="bg-info mt-5 d-flex justify-content-center align-items-center">
+    <section id="subscribe" style="height: 500px;background-color: #ffeaaa;" class="mt-5 d-flex justify-content-center align-items-center">
       <div>
         <h1>LET'S STAY IN TOUCH</h1>
         <h6>Get updates on sales, specials and more</h6>
         <input type="text">
-        <button class="btn-success">SUBMIT</button>
+        <br><br>
+        <button class="btn-warning">SUBMIT</button>
       </div>
     </section>
 
