--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   </header>
   <!-- slider section -->
   <section class="container mt-5">
-    <div id="carouselExampleControls" class="carousel slide panda-slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
+    <div id="carouselExampleControls" class="carousel slide panda-slide " data-bs-ride="carousel">
+      <div class="carousel-inner panda-round">
         <div class="carousel-item active">
           <div class="row d-flex align-items-center p-5">
             <div class="col-md-7 ">
