--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
           </div>
         </div>
         <div class="col">
-          <div class="p-3 bg-success d-flex align-items-center justify-content-around">
+          <div class="p-3 bg-success d-flex align-items-center justify-content-around cat1">
             <h1 class="text-white">Bag</h1>
             <img src="images/categories/bag.png" alt="">
           </div>
         </div>
         <div class="col">
-          <div class="p-3 bg-warning d-flex align-items-center justify-content-around">
+          <div class="p-3 bg-warning d-flex align-items-center justify-content-around cat1">
             <h1 class="text-white">Shoes</h1>
             <img src="images/categories/shoes.png" alt="">
           </div>
